[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luvz"
version = "0.0.1.dev0"
description = "Lazy script builder"
authors = [{name="luvbyte", email="lovemelong@protonmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["cmd2", "rich", "pydantic"]

[tool.setuptools.packages.find]
where = ["."]
include = ["luvz*"]
